# jWrite

./: CMakeLists.txt  jWrite.c  jWrite.h  main.c
